--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -3,7 +3,7 @@ database.username=user
 database.password=password
 database.driverClassName=org.postgresql.Driver
 
-database.init=false
+database.init=true
 
 jdbc.initLocation=initDB.sql
 jpa.showSql=true
