--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,27 +6,32 @@
 
     <display-name>Spring MVC Application</display-name>
 
-    <servlet>
-        <servlet-name>shopServlet</servlet-name>
-        <servlet-class>
-            com.myshop.controller.ShopServlet
-        </servlet-class>
-        <load-on-startup>0</load-on-startup>
-    </servlet>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            classpath:spring/spring-mvc.xml
+            classpath:spring/spring-db.xml
+        </param-value>
+    </context-param>
 
-    <servlet-mapping>
-        <servlet-name>shopServlet</servlet-name>
-        <url-pattern>/shop</url-pattern>
-    </servlet-mapping>
 
+    <!-- Spring MVC -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
     <servlet>
-        <servlet-name>webmvc-dispatcher</servlet-name>
+        <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring/spring-mvc.xml
+            classpath:spring/spring-db.xml</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
     <servlet-mapping>
-        <servlet-name>webmvc-dispatcher</servlet-name>
+        <servlet-name>mvc-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
 </web-app>
