--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <postgresql.version>42.2.12</postgresql.version>
         <spring.version>5.2.6.RELEASE</spring.version>
         <junit.version>4.13</junit.version>
+        <jackson-json.version>2.9.3</jackson-json.version>
+
 
         <spring-data-jpa.version>2.0.2.RELEASE</spring-data-jpa.version>
         <tomcat.version>8.5.23</tomcat.version>
@@ -109,6 +111,23 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!--JSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson-json.version}</version>
         </dependency>
 
         <!-- Webjars (static dependencies distributed as JAR files) -->
