added scheduled task + html/css + sketch of simulator

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,13 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
 
         <!--JSON-->
         <dependency>
