--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -6,6 +6,6 @@ database.driverClassName=org.postgresql.Driver
 database.init=true
 
 jdbc.initLocation=initDB.sql
-jpa.showSql=true
+jpa.showSql=false
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
