--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
             <version>${jackson-json.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.ninja-squad</groupId>
+            <artifactId>DbSetup</artifactId>
+            <version>2.1.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Webjars (static dependencies distributed as JAR files) -->
         <dependency>
             <groupId>org.webjars.bower</groupId>
