--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,12 @@
             <version>2.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>3.1.6</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Webjars (static dependencies distributed as JAR files) -->
         <dependency>
