--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
             classpath:spring/spring-db.xml
         </param-value>
     </context-param>
+    <context-param>
+        <param-name>spring.profiles.active</param-name>
+        <param-value>postgres</param-value>
+    </context-param>
 
     <!-- Spring MVC -->
     <listener>
