--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
     </context-param>
     <context-param>
         <param-name>spring.profiles.active</param-name>
-        <param-value>postgres</param-value>
+        <param-value>heroku</param-value>
     </context-param>
 
     <!-- Spring MVC -->
