--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,13 @@
             <version>3.1.6</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.13.0</version>
+        </dependency>
+
 
 
 
